Fix SSL support

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -62,6 +62,12 @@ How to prepare your code for 2.0:
 
 Anything not well-documented, confusing, or done wrong?  Yell at me on github and maybe I'll fix it.
 
+1.4.4
+=====
+
+SSL support has been enhanced by code I don't fully understand, but which a helpful user suggested
+could fix the one-message-behind situation!
+
 1.4.3
 =====
 
